# bichon

./: .gitignore  Cargo.toml  README.md  config.toml
crates/admin/: Cargo.toml
crates/admin/src/: main.rs  meta.rs  migrate.rs  reset.rs
crates/blob/: Cargo.toml
crates/blob/src/: account.rs  engine.rs  error.rs  lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: auth.rs
crates/cli/src/api/: search.rs
crates/cli/src/export/: mod.rs
crates/core/: Cargo.toml
crates/core/src/account/: migration.rs  payload.rs  view.rs
crates/core/src/admin/: meta.rs
crates/core/src/autoconfig/: client.rs  entity.rs  load.rs  mod.rs  tests.rs
crates/core/src/envelope/: extractor.rs
crates/core/src/imap/: executor.rs
crates/core/src/message/: content.rs  delete.rs  search.rs
crates/core/src/migrate/: mod.rs  store.rs
crates/core/src/migrate/legacy/: fields.rs  mod.rs  schema.rs
crates/core/src/store/: blob.rs  mod.rs
crates/core/src/token/: mod.rs
crates/core/src/utils/: encrypt.rs
crates/server/src/: lib.rs  main.rs
crates/server/src/rest/: mod.rs
crates/smtp/src/: server.rs
web/: pnpm-lock.yaml  tailwind.config.js
web/src/: main.tsx
web/src/api/account/: api.ts
web/src/components/ui/: sidebar.tsx
web/src/features/attachment/: attachment-preview.tsx  mail-message-view.tsx
web/src/features/import/: folder-hint.ts
web/src/features/search/: mail-message-view.tsx
web/src/locales/: ar.json  da.json  de.json  en.json  es.json  fi.json  fr.json  it.json  jp.json  ko.json  nl.json  no.json  pl.json  pt.json  ru.json  sv.json  zh-tw.json  zh.json
(+8 files in other folders)
