[package]
name = "bichon-cli"
version.workspace = true
edition.workspace = true


[dependencies]
bichon-core = { path = "../core" }
tokio.workspace = true
serde.workspace = true
clap.workspace = true
dialoguer.workspace = true
console.workspace = true
mail-parser.workspace = true
reqwest.workspace = true
toml = "0.9.8"
memmap2 = "0.9.10"
outlook-pst = { git = "https://github.com/rustmailer/outlook-pst-rs.git", branch = "main" }
compressed-rtf = "1.0.1"
chrono.workspace = true
mail-send.workspace = true
base64.workspace = true
codepage-strings = "1.0.2"
hex = "0.4.3"
sysinfo.workspace = true
indicatif.workspace = true
serde_json.workspace = true